# CGMCodingChallenge

./: .gitignore  README.md
.github/workflows/: run-tests.yml
Challenge/: CMakeLists.txt  InputHandler.cpp  InputHandler.h  QuestionSystem.cpp  QuestionSystem.h  main.cpp
Challenge/tests/: basicTests.cpp
